<resources>
    <string name="app_name">My Application</string>
    <string name="player_computer">Player VS Computer</string>
    <string name="computer_computer">Computer VS Computer</string>
    <string name="select_play_mode">Select play mode</string>
    <string name="computer">Computer</string>
    <string name="player">Player</string>
    <string name="choose_your_move">Choose your move</string>
    <string name="computer_1">Computer 1</string>
    <string name="computer_2">Computer 2</string>
    <string name="play_again">Play again!</string>
    <string name="change_mode">Change mode</string>
    <string name="bot_1">Bot1 </string>
    <string name="you">You </string>
    <string name="space">&#160;</string>
</resources>
