<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.view.MainActivity"
        android:padding="@dimen/padding_parent">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/select_play_mode"
              android:textColor="@android:color/white"
              android:textSize="@dimen/text_large"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="@dimen/margin_parent"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_centerInParent="true">
        <TextView android:id="@+id/tv_pl_co"
                  android:onClick="onPlayerComputer"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/block_height_normal"
                  android:background="@color/colorAccent"
                  android:text="@string/player_computer"
                  android:gravity="center"
                  android:layout_marginBottom="@dimen/margin_parent"
        />

        <TextView android:id="@+id/tv_com_com"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/block_height_normal"
                  android:background="@color/colorAccent"
                  android:text="@string/computer_computer"
                  android:gravity="center"
                  android:onClick="onComputerComputer"
                  android:layout_marginTop="@dimen/margin_parent"
        />
    </LinearLayout>
</RelativeLayout>